Revert "Fix: Overflow due to datetime picker"
This reverts commit 79430d485d05efa7f73af5c3db2e78b99a8d0c6e.

--- a/apps/xero_workspace/static/css/xero_workspace/schedule.css
+++ b/apps/xero_workspace/static/css/xero_workspace/schedule.css
@@ -133,12 +133,7 @@ p {
 }
 
 .bootstrap-datetimepicker-widget {
-    top: -180px !important;
+    top: -130px !important;
     left: 200px !important;
     bottom: auto !important;
-}
-
-.bootstrap-datetimepicker-widget.dropdown-menu:before,
-.bootstrap-datetimepicker-widget.dropdown-menu:after {
-    content: none !important;
 }
